intear-dex-management/tests/snapshots/xyk_writes__swap_of_more_than_the_balance.snap
---
source: intear-dex-management/tests/xyk_writes.rs
expression: "cli.transaction(\"alice.near\",\n&[\"xyk\", \"swap\", \"alice.near\", \"0\", \"sell\", \"1000 USDt\", \"max-slippage\", \"1%\",\n\"from-balance\", \"to-balance\"]).await"
---
$ near-intear-dex-management xyk swap alice.near 0 sell '1000 USDt' max-slippage '1%' from-balance to-balance network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk swap alice.near 0 sell '1000 USDt' max-slippage '1%' from-balance to-balance network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send

Error:
   0: alice.near has 253.462941 USDt on dex.intear.near, but this needs 1,000 USDt
