intear-dex-management/tests/snapshots/xyk_writes__swap_on_empty_pool.snap
---
source: intear-dex-management/tests/xyk_writes.rs
expression: "cli.transaction(\"alice.near\",\n&[\"xyk\", \"swap\", \"alice.near\", \"4\", \"sell\", \"0.1 NEAR\", \"max-slippage\", \"1%\",\n\"from-balance\", \"to-balance\"]).await"
---
$ near-intear-dex-management xyk swap alice.near 4 sell '0.1 NEAR' max-slippage '1%' from-balance to-balance network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk swap alice.near 4 sell '0.1 NEAR' max-slippage '1%' from-balance to-balance network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send

Error:
   0: Pool #4 of slimedragon.near/xyk has no liquidity
